Bug 368589 - JJ: Minimap should jump to position on click
Summary: JJ: Minimap should jump to position on click
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.24.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2016-09-11 12:11 UTC by Dominik Haumann
Modified: 2017-06-05 15:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominik Haumann 2016-09-11 12:11:58 UTC
When the MiniMap is active, clicking should directly jump to the clicked position.
This is especially required when the text preview is active.

Right now, the behavior is confusing, since the text preview already displays the desired contents under the mouse, but clicking then will just do a page down/up, which is confusing.

Reproducible: Always



Expected Results:  
Direct jump to clicked location, when:
1. text preview is active
2. minimap is active
Comment 1 Kåre Särs 2016-09-11 20:19:43 UTC
Thanks for the report.

I'm not 100% convinced it is a good idea. You can use mouse middle-click to jump to the wanted place directly, but if you have a big document you loose the page-up/down functionality.

I'm not 100% against it either, so if there is a demand for it...
Comment 2 Dominik Haumann 2016-09-11 20:32:09 UTC
Hm, we discussed that a bit more in Berlin, and also e.g. Visual Studio does a direct jump. I believe it makes sense, since the text preview suggests that clicking will go there, which does not happen, though. Page up/down is still accessible through the keyboard.
Comment 3 Sven Brauch 2016-09-11 20:50:04 UTC
I'm with Kare, but changing it is ok as well. The problem with middle-click is that absolutely nobody knows about it, and I think it doesn't even work e.g. on windows.
Comment 4 Kåre Särs 2016-09-12 05:37:19 UTC
When I heard about VS working like that I had to install and test Sublime and yep it works the same way (directly jumping to the clicked area). And I can confirm that middle clicking in Kate on Windows does not work.

Maybe it is better to have it work similar to the competition.
Comment 5 Dominik Haumann 2017-02-18 12:26:55 UTC
I am still convinced that jumping directly to the location makes a lot of sense, especially since we also have the text preview now...
Comment 6 Kåre Särs 2017-06-05 15:34:45 UTC
Git commit 7bb1f434afafd1b4137e2f12bce48b1a75f61270 by Kåre Särs.
Committed on 05/06/2017 at 15:28.
Pushed by sars into branch 'master'.

Jump to the clicked scrollbar position when minim-map is enabled.
Differential Revision: https://phabricator.kde.org/D6086

M  +18   -10   src/view/kateviewhelpers.cpp
M  +0    -1    src/view/kateviewhelpers.h

https://commits.kde.org/ktexteditor/7bb1f434afafd1b4137e2f12bce48b1a75f61270