Jump to the clicked scrollbar position when minim-map is enabled.

BUG: 368589
Differential Revision: https://phabricator.kde.org/D6086